<resources>
    <string name="app_name">Git User Room</string>
    <string name="search">Search Username</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="favourite_user">Favourite User</string>
    <string name="setting">Setting</string>

    <!-- Preference Titles -->
    <string name="alarm_reminder">Set Alarm Reminder</string>
    <string name="alarm_switcher">Alarm Switcher</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="alarm_on">Alarm On</string>


</resources>