<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favourite_user"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"
        app:showAsAction="collapseActionView|always" />

</menu>